fix white space between different <div>s

--- a/src/demo-app/sticky-header/sticky-header-demo.scss
+++ b/src/demo-app/sticky-header/sticky-header-demo.scss
@@ -40,7 +40,7 @@
 
   p {
     text-indent: 4em;
-    margin-bottom: 1.5em;
+    padding:15px;
     -webkit-appearance: none;
     -moz-appearance: none;
   }
